--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SimpleTodo</string>
+    <string name="hint_edit">Update the item…</string>
+    <string name="button_save">Save</string>
+    <string name="button_add">Add</string>
+    <string name="add_item">Add an item…</string>
 </resources>
